--- a/CSS/7.3 Laos flag/style.css
+++ b/CSS/7.3 Laos flag/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 .flag {
     background-color: rgb(213, 5, 5);
     height: 600px;
@@ -20,4 +22,27 @@
     position: absolute;
     top: 50px;
     right: 40%;
+}
+
+.sup, .inf, .of {
+    font-family: "Playfair Display", serif;
+    font-weight: 750;
+    font-size: 55px;
+    margin: 0%;
+}
+
+.sup {
+    position: relative;
+    left: 37.5%;
+    color: white;
+}
+
+.inf{
+    position: relative;
+    left: 21%;
+}
+
+.of {
+    position: relative;
+    left: 34%;
 }
