--- a/CSS/8.4 Web Design Agency Project/style.css
+++ b/CSS/8.4 Web Design Agency Project/style.css
@@ -36,13 +36,13 @@
 
   footer {
     margin-top: 10%;
-    
+    text-align: right;
   }
 }
 
 /*Tablet*/
 
-@media (max-width: 1120px) {
+@media (min-width: 729px) and (max-width: 1120px) {
 
   body {
     font-family: "Poppins", sans-serif;
@@ -77,10 +77,58 @@
   .right {
     margin-top: 14%;
   }
+
+  footer {
+    text-align: right;
+  }
 }
 
 /*Tel*/
 
 @media (max-width: 730px) {
   
+  body {
+    font-family: "Poppins", sans-serif;
+    margin: 50px 50px 0 50px;
+    background-color: #faf9f6;
+    display: flex;
+    flex-direction: column;
+    min-height: 95vh;
+  }
+
+  .logo {
+    height: 25px;
+    margin: 0%;
+    position: relative;
+    left: -10%;
+  }
+
+  .we {
+    font-size: 60px;
+    text-align: center;
+  }
+
+  .highlight {
+    color: rgb(50, 11, 102);
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .tile-image {
+    width: 100%;
+    height: auto;
+    margin: 0 ;
+  }
+
+  .card {
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 ;
+    padding: 0;
+  }
 }
