--- a/CSS/10.3 Mondrian Project/style.css
+++ b/CSS/10.3 Mondrian Project/style.css
@@ -11,28 +11,58 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+
+body {
+   height: 100vh;
+   margin: 0;
+   padding: 0;
+}
+
 .container {
-   background-color: gray;
+   padding: 0;
+   margin: 0;
+   text-align: center;
    height: 748px;
+   background-color: black;
    width: 748px;
    display: grid;
    grid-template-columns: 320px 198px 153px 50px;
-   grid-template-rows: 414px 130px 155px 20px
+   grid-template-rows: 414px 130px 155px 22px;
+   gap: 9px;
 }
 
-.red {
-   background-color: red;
-
+.one {
+   background-color: #E72F24;
 }
 
-.black {
-   background-color: black;
+.two {
+   background-color: #F0F1EC;
+   grid-column: span 3;
 }
 
-.green {
-   background-color: green;
+.three {
+   background-color: #F0F1EC;
+   grid-row: span 2;
 }
 
-.blue {
-   background-color: blue;
+.for {
+   background-color: #F0F1EC;
+   grid-row: span 2;
+   grid-column: span 2;
+}
+
+.five {
+   background-color: #004592;
+}
+
+.six, .seven, .ten {
+   background-color: #F0F1EC;
+}
+
+.eight {
+   background-color: #F9D01E;
+}
+
+.nine {
+   background-color: #232629;
 }
