--- a/Projetos pessoais/Capstone 2/style.css
+++ b/Projetos pessoais/Capstone 2/style.css
@@ -2,3 +2,19 @@ body {
     background-color: #0B192C !important;
     color: #F0F0F0 !important;
 }
+
+.container-profile-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 5%;
+}
+
+.profile-img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+}
