--- a/JS/Market List/styles.css
+++ b/JS/Market List/styles.css
@@ -62,18 +62,43 @@ body {
 }
 
 #needToBuy {
-    background-color: #BF9264;
     display: flex;
     margin: 10px;
+    font-weight: 400;
 
+}
+
+#purchased {
+    font-weight: 400;
+    
 }
 
 .buyButton {
     all: unset;
-    padding: 5px 10px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: #BBD8A3;
+    margin: 0px 10px 0px 15px;
+}
+
+.buyButton:hover {
+    background-color: #6F826A;
+    transition: 0.5s;
 }
 
 .buttonRemove {
     all: unset;
-    padding: 5px 10px;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    background-color: #BBD8A3;
+    border-radius: 5px;
+    margin: 0px 10px 0px 15px;
+}
+
+.buttonRemove:hover {
+    background-color: #BF9264;
+    color: black;
+    transition: 1s;
 }
