--- a/JS/Faq/styles.css
+++ b/JS/Faq/styles.css
@@ -1,7 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: auto;
+    width: 70%;
+}
+
+.title {
+    font-family: "Lexend", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.faqItem {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    font-family: "Lexend", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: larger;
+}
+
 .faqContent {
     display: none;
 }
 
 .faqContent.show {
     display: block;
+}
+
+.faqBtn {
+    all: unset;
+    cursor: pointer;
+    text-align: left;
 }
