--- a/JS/Faq/styles.css
+++ b/JS/Faq/styles.css
@@ -7,6 +7,7 @@
     justify-content: center;
     margin: auto;
     width: 70%;
+    gap: 10px;
 }
 
 .title {
@@ -19,15 +20,25 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
     font-family: "Lexend", sans-serif;
     font-weight: 300;
     font-style: normal;
     font-size: larger;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.faqItem:hover {
+    background-color: aquamarine;
+}
+
+.faqItem.back {
+    background-color: aquamarine;
 }
 
 .faqContent {
     display: none;
+        color: rgb(33, 33, 33);
 }
 
 .faqContent.show {
