--- a/JS/Backend/4.2 Passing Data/views/index.ejs
+++ b/JS/Backend/4.2 Passing Data/views/index.ejs
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-  <h1>
-    <% if (typeof fName !== undefined && typeof lName !== undefined) { %>
-      
-  </h1>
+  <% if (typeof nome !== "undefined" && typeof sobNome !== "undefined") { %>
+    <h1>There are <%= qtdLetra %> letters in your name</h1>
+  <% } else { %> 
+    <h1>Write your name</h1>
+  <% } %>
 
   <form action="/submit" method="POST">
     <input type="text" name="fName" placeholder="First name">
