--- a/Projetos/Portifolio/views/index.ejs
+++ b/Projetos/Portifolio/views/index.ejs
@@ -2,7 +2,23 @@
 
 <body>
     <main>
-        <h1>test</h1>
+        <div>
+            <h1>Desenvolvedor Web e Consultor IOT</h1>
+            <p>Olá, me chamo André Carvalho. Sou consultor de tecnologia e estudando de desenvolvimento web</p>
+        </div>
+        <div>
+            <div>
+                <h2>Atualmente</h2>
+                <p>Consultor na PC Serviços e Tecnologia</p>
+            </div>
+            <div>
+                <h2>Localização</h2>
+                <p>Rio Grande do Sul (e remotamente)</p>
+            </div>
+            <div>
+                <button>Sobre mim</button>
+            </div>
+        </div>
     </main>
 </body>
 
