--- a/Projetos/Portifolio/views/partials/header.ejs
+++ b/Projetos/Portifolio/views/partials/header.ejs
@@ -8,5 +8,17 @@
 </head>
 <body>
   <header>
-    
+    <div>
+      <div>
+        <img src="/images/cup-hot.svg" alt="Coffee icon">
+        <h1>André Carvalho</h1>
+      </div>
+      <nav>
+        <ul>
+          <li>Sobre</li>
+          <li>Blog</li>
+          <li>Inicio</li>
+        </ul>
+      </nav>
+    </div>
   </header>
