--- a/Projetos/Portifolio/views/partials/header.ejs
+++ b/Projetos/Portifolio/views/partials/header.ejs
@@ -8,16 +8,16 @@
 </head>
 <body>
   <header>
-    <div>
-      <div>
+    <div class="menu content">
+      <div class="menu logo">
         <img src="/images/cup-hot.svg" alt="Coffee icon">
-        <h1>André Carvalho</h1>
+        <h1 class="logo-nome">André Carvalho</h1>
       </div>
-      <nav>
-        <ul>
-          <li>Sobre</li>
-          <li>Blog</li>
-          <li>Inicio</li>
+      <nav class="menu">
+        <ul class="menu itens">
+          <li><button>Sobre</button></li>
+          <li><button>Blog</button></li>
+          <li><button>Início</button></li>
         </ul>
       </nav>
     </div>
