--- a/Projetos/Portifolio/views/index.ejs
+++ b/Projetos/Portifolio/views/index.ejs
@@ -4,7 +4,7 @@
     <main>
         <div>
             <h1>Desenvolvedor Web e Consultor IOT</h1>
-            <p>Olá, me chamo André Carvalho. Sou consultor de tecnologia e estudando de desenvolvimento web</p>
+            <p>Olá, me chamo André Carvalho. Sou consultor de tecnologia e estudante de desenvolvimento web</p>
         </div>
         <div>
             <div>
