--- a/Projetos/Portifolio/views/index.ejs
+++ b/Projetos/Portifolio/views/index.ejs
@@ -1,25 +1,49 @@
-<%- include("partials/header.ejs") %>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Me - André Carvalho</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
+  </head>
+  <body>
+    <%- include("partials/header.ejs") %>
 
-<body>
     <main>
+      <div>
+        <h1>Desenvolvedor Web e Consultor IOT</h1>
+        <p>
+          Olá, me chamo André Carvalho. Sou consultor de tecnologia e estudante
+          de desenvolvimento web
+        </p>
+      </div>
+      <div>
         <div>
-            <h1>Desenvolvedor Web e Consultor IOT</h1>
-            <p>Olá, me chamo André Carvalho. Sou consultor de tecnologia e estudante de desenvolvimento web</p>
+          <h2>Atualmente</h2>
+          <p>Consultor na PC Serviços e Tecnologia</p>
         </div>
         <div>
-            <div>
-                <h2>Atualmente</h2>
-                <p>Consultor na PC Serviços e Tecnologia</p>
-            </div>
-            <div>
-                <h2>Localização</h2>
-                <p>Rio Grande do Sul (e remotamente)</p>
-            </div>
-            <div>
-                <button>Sobre mim</button>
-            </div>
+          <h2>Localização</h2>
+          <p>Rio Grande do Sul (e remotamente)</p>
         </div>
+        <div>
+          <button>Sobre mim</button>
+        </div>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+        <p>lo</p>
+      </div>
     </main>
-</body>
 
-<%- include("partials/footer.ejs") %>
+    <%- include("partials/footer.ejs") %>
+  </body>
+</html>
