--- a/Projetos/Portifolio/views/partials/header.ejs
+++ b/Projetos/Portifolio/views/partials/header.ejs
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me - André Carvalho</title>
-  <link rel="stylesheet" href="/styles/styles.css">
-</head>
-<body>
-  <header>
-    <div class="menu content">
-      <div class="menu logo">
-        <img src="/images/cup-hot.svg" alt="Coffee icon">
-        <h1 class="logo-nome">André Carvalho</h1>
-      </div>
-      <nav class="menu">
-        <ul class="menu itens">
-          <li><button>Sobre</button></li>
-          <li><button>Blog</button></li>
-          <li><button>Início</button></li>
-        </ul>
-      </nav>
+<header>
+  <div class="menu content">
+    <div class="menu logo">
+      <img class="svg-white" src="/images/cup-hot.svg" alt="Coffee icon" />
+      <h1 class="logo-nome">André Carvalho</h1>
     </div>
-  </header>
+    <nav class="menu">
+      <ul class="menu itens">
+        <li><button>Sobre</button></li>
+        <li><button>Blog</button></li>
+        <li><button>Início</button></li>
+      </ul>
+    </nav>
+  </div>
+</header>
