--- a/Projetos/Portifolio/views/index.ejs
+++ b/Projetos/Portifolio/views/index.ejs
@@ -10,37 +10,16 @@
     <%- include("partials/header.ejs") %>
 
     <main>
-      <div>
-        <h1>Desenvolvedor Web e Consultor IOT</h1>
-        <p>
-          Olá, me chamo André Carvalho. Sou consultor de tecnologia e estudante
-          de desenvolvimento web
-        </p>
+      <div class="principal">
+        <div class="card-principal">
+          <h1>Analista de Sistemas e Consultor IOT</h1>
+        </div>
       </div>
       <div>
-        <div>
-          <h2>Atualmente</h2>
-          <p>Consultor na PC Serviços e Tecnologia</p>
-        </div>
-        <div>
-          <h2>Localização</h2>
-          <p>Rio Grande do Sul (e remotamente)</p>
-        </div>
-        <div>
-          <button>Sobre mim</button>
-        </div>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
-        <p>lo</p>
+        <h2>Atualmente</h2>
+        <p>Consultor na PC Serviços e Tecnologia</p>
+        <h2>Localização</h2>
+        <p>Rio Grande do Sul (e remotamente)</p>
       </div>
     </main>
 
