--- a/Projetos/Portifolio/public/styles/styles.css
+++ b/Projetos/Portifolio/public/styles/styles.css
@@ -9,13 +9,13 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    height: 80px;
+    height: 120px;
     width: 100%;
     z-index: 1000;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #28292c;
+    backdrop-filter: blur(10px);
 }
 
 
@@ -41,9 +41,9 @@ h1, h2 {
 
 body {
     margin: 0;
-    padding-top: 80px;
+    padding-top: 150px;
     background: linear-gradient(to right ,#000000, #a1a4a8);
-    animation: gradientMove 10s ease infinite;
+    animation: gradientMove 25s ease infinite;
     background-size: 250% 250%;
     color: aliceblue;
     font-family: "Lexend", sans-serif;
@@ -79,4 +79,22 @@ body {
 
 .logo {
     padding-right: 30px;
+}
+
+.principal {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    place-items: center;
+}   
+
+.card-principal {
+    grid-column: span 2;
+}
+
+.card-principal > h1 {
+    font-size: 40px;
+}
+
+footer {
+    margin-top: 500px;
 }
