--- a/Projetos/Portifolio/views/partials/header.ejs
+++ b/Projetos/Portifolio/views/partials/header.ejs
@@ -6,9 +6,9 @@
     </div>
     <nav class="menu">
       <ul class="menu itens">
-        <li><button>Sobre</button></li>
+        <li><a href="#readme">Sobre mim</a></li>
         <li><button>Blog</button></li>
-        <li><button>Início</button></li>
+        <li><a href="#template">Início</a></li>
       </ul>
     </nav>
   </div>
