--- a/Projetos/Portifolio/views/index.ejs
+++ b/Projetos/Portifolio/views/index.ejs
@@ -10,16 +10,35 @@
     <%- include("partials/header.ejs") %>
 
     <main>
-      <div class="principal">
-        <div class="card-principal">
+      <div class="template" id="template">
+        <div class="card-template">
           <h1>Analista de Sistemas e Consultor IOT</h1>
         </div>
       </div>
-      <div>
-        <h2>Atualmente</h2>
-        <p>Consultor na PC Serviços e Tecnologia</p>
-        <h2>Localização</h2>
-        <p>Rio Grande do Sul (e remotamente)</p>
+      <div class="principal">
+        <p>
+          Consultor de redes e desenvolvedor web. No dia a dia, resolvo desafios
+          de infraestrutura; à noite, crio sites e aprimoro minhas habilidades
+          em web.
+        </p>
+        <img
+          class="rack-image"
+          src="images/IMG-20250313-WA0025.jpg"
+          alt="img organizando rack"
+        />
+      </div>
+      <div class="readme" id="readme">
+        <h2>Readme</h2>
+        <p class="readme-text">
+          Graduado em Análise e Desenvolvimento de Sistemas e atualmente
+          cursando Pós-Graduação em Engenharia de Software. No dia, vivo no
+          mundo da infraestrutura de redes garantindo que tudo funcione com
+          estabilidade e segurança. À noite, mergulho no desenvolvimento web,
+          criando sites, explorando novas tecnologias e transformando ideias em
+          soluções digitais. Curioso por natureza minha missão é unir
+          experiência técnica e criatividade para entregar projetos que sejam
+          eficientes, escaláveis e visualmente impactantes.
+        </p>
       </div>
     </main>
 
