--- a/API/5.3 Axios/views/index.ejs
+++ b/API/5.3 Axios/views/index.ejs
@@ -35,40 +35,41 @@
     </form>
     <section id="cards" class="cards">
       <article class="card-item">
-        <% if (data){ %>
-        <h2 class="card-activity">
-          <%=data.activity%>
-        </h2>
-        <div class="card-info">
-          <span class="card-type">
-            <%=data.type%>
-          </span>
-          <span class="card-participants">
-            participants: <%=data.participants%>
-            <span class="card-number"></span>
-          </span>
-        </div>
-        <% } else { %>
+        <%if (!locals.error) {%>
+          <% if (data){ %>
           <h2 class="card-activity">
-          <%=data.activity%>
-        </h2>
-        <div class="card-info">
-          <span class="card-type">
-            <%=data.type%>
-          </span>
-          <span class="card-participants">
-            participants: <%=data.participants%>
-            <span class="card-number"></span>
-          </span>
+            <%=data.activity%>
+          </h2>
+          <div class="card-info">
+            <span class="card-type">
+              <%=data.type%>
+            </span>
+            <span class="card-participants">
+              participants: <%=data.participants%>
+              <span class="card-number"></span>
+            </span>
+          </div>
+          <% } else { %>
+            <h2 class="card-activity">
+            <%=data.activity%>
+          </h2>
+          <div class="card-info">
+            <span class="card-type">
+              <%=data.type%>
+            </span>
+            <span class="card-participants">
+              participants: <%=data.participants%>
+              <span class="card-number"></span>
+            </span>
+          </div>
+          <% } %>
+        </article>
+        <%}else{%>
+
+        <div id="tag-error" class="tag-error">
+          <p>No activities that match your criteria.</p>
         </div>
-        <% } %>
-      </article>
-
-
-      <div id="tag-error" class="tag-error">
-        <!-- Show any errors that were sent from the backend -->
-      </div>
-
+        <%}%>
     </section>
   </div>
 
